--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
                                     </a>
                                 </div>
                             </li>
+
+                            <li>
+                                <div class="compras" align="right">
+                                    <a href="#">
+                                        <img src="Img/icon/carritoCompras.png" width="50">
+                                    </a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
 
@@ -200,6 +208,12 @@
                     <li>
                         <div class="iconoHorario">
                             <img src="Img/icon/horario.png" width="50">
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="iconoTelefono">
+                            <img src="Img/icon/telefono.png" width="50">
                         </div>
                     </li>
                 </ul>
