--- a/Vista/clientes.html
+++ b/Vista/clientes.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" href="../Img/icon/grupo.png">
-        <title>Document</title>
+        <title>Clientes</title>
     </head>
 
     <body>
-        <form action="clientes" method="get" align="center">
+        <form action="clientes.php" method="get" align="center">
 
             <div>
                 <h1>FORMULARIO CLIENTES</h1>
