--- a/Vista/login.html
+++ b/Vista/login.html
@@ -43,13 +43,13 @@
             <br>
             
             <div class="helpUsuario">
-                <a href="#">
+                <a href="recuperarUsuario.html">
                     <p>Olvide mi Usuario</p>
                 </a>
             </div>
 
             <div class="helpPassword">
-                <a href="#">
+                <a href="recuperarPassword.html">
                     <p>Olvide mi Contraseña</p>
                 </a>
             </div>
