--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Barra</title>
+        <title>Home</title>
         <link rel="icon" href="Img/icon/home.png">
     </head>
 
